--- a/Pages/Books/Details.cshtml
+++ b/Pages/Books/Details.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Book.Title)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.Author)
+            @Html.DisplayNameFor(model => model.Book.AuthorID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Author)
+            @Html.DisplayFor(model => model.Book.AuthorID)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Book.Price)
@@ -30,11 +30,22 @@
             @Html.DisplayFor(model => model.Book.Price)
         </dd>
         <dt class="col-sm-2">             
-            @Html.DisplayNameFor(model => model.Book.PublishingDate)         
+            @Html.DisplayNameFor(model => model.Book.PublishingDate )         
         </dt>
         <dd class="col-sm-10">             
-            @Html.DisplayFor(model => model.Book.PublishingDate)       
+            @Html.DisplayFor(model => model.Book.PublishingDate )       
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Book.Publisher.PublisherName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Book.Publisher.PublisherName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Book.BookCategories)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Book.BookCategories)
     </dl>
 </div>
 <div>
