--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/"
 @model Sinca_Teodora_Lab2.Pages.Books.IndexModel
 
 @{
@@ -18,6 +18,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Author)
+              
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Price)
@@ -28,18 +29,28 @@
             <th>               
                 @Html.DisplayNameFor(model => model.Book[0].Publisher.PublisherName)             
             </th>
+            <th>                 
+                @Html.DisplayNameFor(model => model.Book[0].BookCategories)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Book) {
-        <tr>
+@foreach (var item in Model.BookD.Books) {
+        string selectedRow = "";     
+            if (item.ID == Model.BookID)     
+            {                
+                selectedRow = "table-success";     
+            } 
+        <tr class="@selectedRow">
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Author)
-            </td>
+   
+             <td>
+                 @Html.DisplayFor(modelItem => item.Author.LastName) @Html.DisplayFor(modelItem => item.Author.FirstName)
+             </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
@@ -49,6 +60,14 @@
             <td>           
                 @Html.DisplayFor(modelItem => item.Publisher.PublisherName)        
             </td>
+            <td>                
+                @{                
+                    foreach (var category in item.BookCategories)    
+                    {                        
+                        @category.Category.ID @:  @category.Category.CategoryName <br/>       
+                    }        
+                 }
+             </td> 
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
