--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Books/Index">Library</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Books/Index">Books</a>
                 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Authors/Index">Authors</a>
                         </li>
-                        <li class="nav-item">
+                        <li cl1ass="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Publishers/Index">Publishers</a>
                         </li>
                         <li class="nav-item">
